--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <img src="matt.png" alt="Ye's pfp" width="300" height="300">
         <h1>KANYE EAST</h1>
     </div>
+    <div class="Desc">
+       <h1>Description</h1>
+       <h2>He love Fornite balls</h2> 
+       <h2>Popular Singer in the world.</h2> 
+       <h2></h2> 
+       <h2></h2> 
+       <h2></h2> 
+    </div>
 </body>
 </html>
